<resources>
	<string name="app_name">Fortnite Pocket Manager</string>
	<string name="action_login">Log In</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is invalid</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_challenges">Challenges</string>
	<string name="title_events">Events</string>
	<string name="title_item_shop">Item Shop</string>
	<string name="title_locker">Locker</string>
	<string name="title_news">News</string>
	<string name="title_profile">Profile</string>
	<string name="title_stats">Stats</string>
	<string name="title_stw">Save the World</string>
	<string name="title_stw_info">Missions Info</string>
	<string name="title_daily_rewards">Daily Rewards</string>
	<string name="title_research">Research</string>
	<string name="action_logout">Log Out</string>
	<string name="locker_filter_all">All</string>
	<string name="locker_filter_animated">Animated</string>
	<string name="locker_filter_dances">Dances</string>
	<string name="locker_filter_emoticons">Emoticons</string>
	<string name="locker_filter_favorite">Favorite</string>
	<string name="locker_filter_new">New</string>
	<string name="locker_filter_reactive">Reactive</string>
	<string name="locker_filter_sprays">Sprays</string>
	<string name="locker_filter_styles">Styles</string>
	<string name="locker_filter_pets">Pets</string>
	<string name="locker_filter_toys">Toys</string>
	<string name="itemshop_banner_Animated">Animated!</string>
	<string name="itemshop_banner_Back">It\'s Back!</string>
	<string name="itemshop_banner_CollectTheSet">Collect the Set!</string>
	<string name="itemshop_banner_New">New!</string>
	<string name="itemshop_banner_NewStyle">New Style!</string>
	<string name="itemshop_banner_SelectableStyles">Selectable Styles!</string>
	<string name="itemshop_banner_UnlockStyles">Unlock Styles!</string>
	<string name="copyright">Created by amrsatrio, a Fortnite player just like you.\n\nCredits:\n\u2022 IG @cryotus: for the app name and icon\n\u2022 u/easkate: for the concept of this app\n\u2022 Kysune, Roberto Graham, and Vrekt: for the network endpoints and its usage\n\u2022 Cyuubi: for finding a way to find out how Fortnite\'s networking works\n\u2022 John Wick Parse by Waddlesworth: for the item data reader\n\u2022 UModel by Gildor: for the image assets exporter\n\nThis app is not affiliated in any way with Epic Games.\nAssets property of Epic Games and their respective owners.\n\n© 2019, Epic Games, Inc. Epic, Epic Games, the Epic Games logo, Fortnite, the Fortnite logo, Unreal, Unreal Engine 4 and UE4 are trademarks or registered trademarks of Epic Games, Inc. in the United States of America and elsewhere. All rights reserved.</string>
	<string name="title_store">Store</string>
	<string name="quest_desc_party_assist">Activating %s will allow other members of your party to assist you in completing this challenge. You can only receive assistance on one challenge at a time.</string>
	<string name="quest_desc_replace">Abandon this daily challenge and replace it with a new one. You can only do this once per day.</string>
</resources>
