<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main_root"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<FrameLayout
		android:id="@+id/profile_frame"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:id="@+id/loadable_loading"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center">

			<ProgressBar
				style="?android:progressBarStyle"
				android:layout_width="36dp"
				android:layout_height="36dp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:text="Loading Profile..."
				android:textAllCaps="true"
				android:textColor="?android:textColorPrimary" />
		</LinearLayout>

		<include
			layout="@layout/profile_view"
			android:visibility="invisible" />

		<TextView
			android:id="@+id/loadable_empty_text"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:textAllCaps="true"
			android:textColor="?android:textColorPrimary" />
	</FrameLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<androidx.gridlayout.widget.GridLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:columnCount="2">

				<Button
					android:id="@+id/main_screen_btn_profile"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:enabled="false"
					android:text="@string/title_profile"
					app:layout_columnWeight="1" />

				<Button
					android:id="@+id/main_screen_btn_challenges"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:text="@string/title_challenges"
					app:layout_columnWeight="1" />

				<Button
					android:id="@+id/main_screen_btn_events"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:text="@string/title_events"
					app:layout_columnWeight="1" />

				<Button
					android:id="@+id/main_screen_btn_stats"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:text="@string/title_stats"
					app:layout_columnWeight="1" />

				<Button
					android:id="@+id/main_screen_btn_locker"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:text="@string/title_locker"
					app:layout_columnWeight="1" />

				<Button
					android:id="@+id/main_screen_btn_item_shop"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:enabled="false"
					android:text="@string/title_item_shop"
					app:layout_columnWeight="1" />

				<Button
					android:id="@+id/main_screen_btn_news"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:text="@string/title_news"
					app:layout_columnWeight="1" />

				<Button
					android:id="@+id/main_screen_btn_stw"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:text="@string/title_stw_info"
					app:layout_columnWeight="1" />
			</androidx.gridlayout.widget.GridLayout>

			<Button
				android:id="@+id/main_screen_btn_login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/action_login" />

			<TextView
				android:id="@+id/main_screen_login_username"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:gravity="center_horizontal"
				android:textColor="?android:textColorPrimary"
				android:textStyle="bold"
				tools:text="Username" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>