<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical"
	tools:context=".activity.LoginActivity">

	<LinearLayout
		android:id="@+id/login_progress"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:paddingTop="48dp"
		android:visibility="gone">

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/login_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="8dp"
			android:text="Logging in..."
			android:textAppearance="?android:textAppearanceMedium"
			android:textColor="?android:textColorPrimary" />
	</LinearLayout>

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:id="@+id/email_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingBottom="@dimen/activity_vertical_margin">

			<AutoCompleteTextView
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_email"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:singleLine="true" />

			<EditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_password"
				android:imeActionId="6"
				android:imeActionLabel="@string/action_login"
				android:imeOptions="actionUnspecified"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true" />

			<Button
				android:id="@+id/btn_get_one_time_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?android:selectableItemBackground"
				android:text="Get one-time password" />

			<Button
				android:id="@+id/email_sign_in_button"
				style="@style/btn_primary_m_normal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/action_login" />

		</LinearLayout>
	</ScrollView>
</RelativeLayout>